--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -12,3 +12,16 @@
     opacity: 1;
   }
 }
+
+.header-container {
+  align-items: center;
+  background-color: rgb(147, 248, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.header--hidden {
+  display: none;
+}
